--- a/portfilio/src/main/resources/templates/index.html
+++ b/portfilio/src/main/resources/templates/index.html
@@ -13,12 +13,27 @@
     <link rel="stylesheet" type="text/css" href="../static/wow-animation/animate.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <title>David Papoyan 's Portfolio</title>
+    <title>Gor Gevorgyan's portfolio"</title>
 </head>
 <body>
 <script src="jsfile.js"></script>
+
 <div class=" header position-relative w-100">
+
     <div class="headerfilter position-absolute w-100 d-flex align-items-center">
+        <div class="d-flex ">
+            <form class="form-inline" action="/action_page.php">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                <label for="pwd">Password:</label>
+                <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+                <div class="form-check">
+                    <label class="form-check-label">
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
         <div id="fuul" class="d-flex w-100 justify-content-center align-items-center flex-column">
 
             <div id="h1" class="text-center"><h1 class="h1 wow fadeInLeftBig bold" data-wow-duration="1s">GOR <br>
