--- a/portfilio/src/main/resources/templates/index.html
+++ b/portfilio/src/main/resources/templates/index.html
@@ -17,23 +17,15 @@
 </head>
 <body>
 <script src="jsfile.js"></script>
-
+<div class="d-flex ">
+    <form class="form-inline" action="/action_page.php">
+        <button type="submit" class="btn btn-primary ml-4" id="email" name="login">LOGIN</button>
+        <button type="submit" class="btn btn-primary ml-4" id="pwd" name="register">REGISTER</button>
+    </form>
+</div>
 <div class=" header position-relative w-100">
-
     <div class="headerfilter position-absolute w-100 d-flex align-items-center">
-        <div class="d-flex ">
-            <form class="form-inline" action="/action_page.php">
-                <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
-                <div class="form-check">
-                    <label class="form-check-label">
-                    </label>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
+
         <div id="fuul" class="d-flex w-100 justify-content-center align-items-center flex-column">
 
             <div id="h1" class="text-center"><h1 class="h1 wow fadeInLeftBig bold" data-wow-duration="1s">GOR <br>
