--- a/portfilio/src/main/resources/templates/index.html
+++ b/portfilio/src/main/resources/templates/index.html
@@ -17,11 +17,10 @@
 </head>
 <body>
 <script src="jsfile.js"></script>
-<div class="d-flex ">
-    <form class="form-inline" action="/action_page.php">
-        <button type="submit" class="btn btn-primary ml-4" id="email" name="login">LOGIN</button>
-        <button type="submit" class="btn btn-primary ml-4" id="pwd" name="register">REGISTER</button>
-    </form>
+<div class="d-flex flex-row-reverse bg-secondary">
+
+    <button type="submit" class="btn regular btn-primary mr-4 mt-2 mb-2" id="email" name="login">LOGIN</button>
+    <button type="submit" class="btn regular btn-primary mr-4 mt-2 mb-2" id="pwd" name="register">REGISTER</button>
 </div>
 <div class=" header position-relative w-100">
     <div class="headerfilter position-absolute w-100 d-flex align-items-center">
@@ -46,31 +45,28 @@
         <div class="smallcompanies col-md-4 ">
             <div class="w-100">
                 <a href="https://drive.google.com/open?id=1GT9yfjQsRpJNUNynMbSofuZ476vsGFDg"> <img
-                        class="w-100 wow fadeInLeftBig img1" data-wow-duration="1s" src="../static/images/(8).png"></a>
+                        class="w-100 wow fadeInLeftBig img1" data-wow-duration="1s" src="../static/images/(8).jpg"></a>
 
             </div>
-            <p class="templatestxt text-center pt-3 wow fadeInLeftBig bold" data-wow-duration="1.5s">Template for a
-                small companies</p>
-            <p class="templatestxt2 mb-5 text-center wow fadeInLeftBig regular" data-wow-duration="1.5s">The template is
-                intended for small companies or for your blog, with pages and animations.It also has sliders, and the
-                most glavnoe adaptive design.Also you can change the colors of the website in a minute ( in the
-                directory "css" there is a folder for the website's themes ) and so you can change the colors in a
-                minute.
-
-                The existing page: galleries, events, blog, courses that you can organize and put here, scholarships and
-                for contacting the owner of the website.<br><a
-                        href="https://drive.google.com/open?id=1GT9yfjQsRpJNUNynMbSofuZ476vsGFDg" class="a bold">view
-                    project</a></p>
+            <p class="templatestxt text-center pt-3 wow fadeInLeftBig bold" data-wow-duration="1.5s">This is one of my
+                works</p>
+            <p class="templatestxt2 mb-5 text-center wow fadeInLeftBig regular" data-wow-duration="1.5s">
+                E-Shopper is an online shop.I worked on this project writing beck-and and using "Spring"
+                framework , also I used spring tools as boot,data,security,mailing and so on.
+                <br><a
+                    href="https://drive.google.com/open?id=1GT9yfjQsRpJNUNynMbSofuZ476vsGFDg" class="a bold">view
+                project</a></p>
         </div>
 
 
         <div class="psdtohtml col-md-4 ">
             <a href="https://drive.google.com/open?id=1-m4dW5pDhKKgKt43d0Wo_-kH3E3aaEgG"> <img
-                    class="w-100 wow fadeInUpBig img1" data-wow-duration="1s" src="../static/images/(6).png"></a>
-            <p class="templatestxt pt-3 text-center wow fadeInUpBig  bold" data-wow-duration="1.5s">PSD to HTML</p>
-            <p class="templatestxt2 mb-5 text-center wow fadeInUpBig regular" data-wow-duration="1.5s">Mache- Designed
-                for sel in HTML tepmlate websites<br>
-                Responsive Template.<br><a href="https://drive.google.com/open?id=1-m4dW5pDhKKgKt43d0Wo_-kH3E3aaEgG"
+                    class="w-100 wow fadeInUpBig img1" data-wow-duration="1s" src="../static/images/(6).jpg"></a>
+            <p class="templatestxt pt-3 text-center wow fadeInUpBig  bold" data-wow-duration="1.5s">Our team work</p>
+            <p class="templatestxt2 mb-5 text-center wow fadeInUpBig regular" data-wow-duration="1.5s">
+                The result of our team work is this project called "Smile-dent".<br>
+                "Smile-dent" is the idea of online-registering the patients in stomatology.<br>
+                <a href="https://drive.google.com/open?id=1-m4dW5pDhKKgKt43d0Wo_-kH3E3aaEgG"
                                            class="a  bold">view project</a></p>
 
         </div>
