Adding Fivee Friend Smile application .

--- a/portfilio/src/main/resources/templates/index.html
+++ b/portfilio/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="../static/images/icons8.png" type="image/gif"/>
+    <link rel="icon" href="../static/images/g.jpg" type="image/gif"/>
     <link rel="stylesheet" type="text/css" href="../static/wow-animation/animate.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -44,7 +44,7 @@
     <div class="myprojects w-100 mt-5 d-flex  justify-content-around">
         <div class="smallcompanies col-md-4 ">
             <div class="w-100">
-                <a href="https://drive.google.com/open?id=1GT9yfjQsRpJNUNynMbSofuZ476vsGFDg"> <img
+                <a href="https://goo.gl/Ab8XXn"> <img
                         class="w-100 wow fadeInLeftBig img1" data-wow-duration="1s" src="../static/images/(8).jpg"></a>
 
             </div>
@@ -54,7 +54,7 @@
                 E-Shopper is an online shop.I worked on this project writing beck-and and using "Spring"
                 framework , also I used spring tools as boot,data,security,mailing and so on.
                 <br><a
-                    href="https://drive.google.com/open?id=1GT9yfjQsRpJNUNynMbSofuZ476vsGFDg" class="a bold">view
+                    href="https://goo.gl/Ab8XXn" class="a bold">view
                 project</a></p>
         </div>
 
@@ -67,7 +67,7 @@
                 The result of our team work is this project called "Smile-dent".<br>
                 "Smile-dent" is the idea of online-registering the patients in stomatology.<br>
                 <a href="https://drive.google.com/open?id=1-m4dW5pDhKKgKt43d0Wo_-kH3E3aaEgG"
-                                           class="a  bold">view project</a></p>
+                   class="a  bold">view project</a></p>
 
         </div>
 
@@ -141,29 +141,36 @@
             </div>
         </div>
         <div class="cv wow fadeInRightBig col-md-7" data-wow-duration="1s">
-            <div class="w-100 cvname "><a class="  font-weight-bold">David Papoyan:</a> front end and back end
-                developer:
-                From Armenia,Gyumri:<br>
+            <div class="w-100 cvname "><a class="  font-weight-bold">Gor Gevorgyan:</a>back end
+                developer and front end(basic)
+                From Armenia in Gyumri:<br>
                 <a class=" font-weight-bold ">Education:</a>
-                <a class="education" href="http://www.asuegb.am/">Armenian State Economic University Gyumri
-                    Branch(2014-2017),</a>
-                Profession management:<br>
+                <a class="education" href="http://www.asuegb.am/">NATIONAL POLYTECHNIC UNIVERSITY OF ARMENIA GYUMRI
+                    BRANCH(2012-2016),</a>
+                Profession information technology:<br>
                 <a class="education" href="https://www.facebook.com/wedoappsLLC/">WeDoApps programming (2017 -
-                    2018):</a>Front end developer: <br>
+                    2018):</a>Mobile Android developer: <br>
                 <a class="education" href="https://www.facebook.com/MICArmenia/">GITC Microsoft Innovation Center
-                    Armenia (2018 -current):</a>Back end developer(JAVA):<br>
+                    Armenia (2017 -current):</a>Back end developer(JAVA):<br>
+                <a class="education" href="https://www.facebook.com/MICArmenia/">Gyumri Information Technologies Center
+                    Armenia (2015 sep - 2016 jul):</a>Back end developer(JAVA):<br>
                 Solid background and advanced knowledge in computer development software including
-                HTML5,CSS3,BOOTSTRAP,SCSS,JS,JQUERY,SQL,PHP,JAVA. Skilled in working with database management
+                JAVA,MYSQL,HTML,CSS,BOOTSTRAP,JS.Skilled in working with database management
                 tools such as MySQL. Highly organized with exceptional commitment to task completion
                 and quality assurance when working with computer software programs.
                 Committed to delivering company objectives to projects and results to customers and
                 improving each version of software I engage with.Ability to solve complex problems
                 successfully with minimal guidance or help using a logical reasoning technique and a
                 strong attention to detail.<br>
-                <a class='font-weight-bold'>Personal skills and competences:</a>
-                Mother tongue Armenian,
-                Other languages: Russian(excellent), English(middle),
-                A volunteer team member in Narek Charity center <h4 class="cvtxt regular"></h4></div>
+                <a class='font-weight-bold'>Personal skills and competences:</a><br>
+                <a class='font-weight-bold'>Experience:</a><br>
+                WeDoApps- Dec 2015- Mar 2016-Android intern Ananiks:<br>
+                April 2016- July 2016 - Java intern:<br>
+                WeDoApps- Nov 2017- Mar 2018-Java intern, JavaScript intern, JS React Native inter<br>
+                A volunteer team member in Narek Charity center <h4 class="cvtxt regular"></h4>
+                <a class='font-weight-bold'>Language:</a><br>
+                Mother tongue Armenian, Russian(excellent), English(middle)
+                </div>
             <div class="w-100 d-flex justify-content-center flex-column">
                 <hr class="w-100 ">
                 <h3 class="my mt-3 bold text-center">I'm In Websites</h3>
@@ -175,19 +182,16 @@
 
             <div class="mycontackts mt-2 w-100 wow fadeInRightBig  d-flex flex-wrap justify-content-center"
                  data-wow-duration="1.5s">
-                <a href="https://www.facebook.com/DAVID11SL071">
+                <a href="https://goo.gl/zaKsk3">
                     <div class="icon  mb-5 rounded-circle"><img class="m-2" src="../static/images/fb.png"></div>
                 </a>
-                <a href="https://plus.google.com/u/0/110405926600596421051">
+                <a href="https://goo.gl/SSeQfa">
                     <div class="icon ml-4 mb-5 rounded-circle"><img class="m-2" src="../static/images/g+.png"></div>
                 </a>
-                <a href="https://twitter.com/davidpapoyan">
-                    <div class="icon ml-4 mb-5 rounded-circle"><img class="m-2" src="../static/images/twit.png"></div>
-                </a>
-                <a href="https://github.com/David887818">
+                <a href="https://goo.gl/EaoFVV">
                     <div class="icon ml-4 mb-5 rounded-circle"><img class="m-2" src="../static/images/git.png"></div>
                 </a>
-                <a href="https://www.instagram.com/david___077/?hl=ru">
+                <a href="https://goo.gl/96QPbn">
                     <div class="icon ml-4 mb-5 rounded-circle"><img class="m-2" src="../static/images/instagram.png">
                     </div>
                 </a>
@@ -201,7 +205,7 @@
         <div class="footerfilter position-absolute w-100 d-flex justify-content-center align-items-center">
             <div class="d-flex justify-content-center align-items-center">
                 <h5 class="footertxt wow fadeInLeft bold " data-wow-duration="1.5s">Designed and Coded by <a
-                        href="https://www.facebook.com/DAVID11SL071">David Papoyan</a></h5>
+                        href="https://www.facebook.com/DAVID11SL071">Gor Gevorgyan</a></h5>
             </div>
         </div>
     </div>
