--- a/portfilio/src/main/resources/templates/index.html
+++ b/portfilio/src/main/resources/templates/index.html
@@ -60,13 +60,13 @@
 
 
         <div class="psdtohtml col-md-4 ">
-            <a href="https://drive.google.com/open?id=1-m4dW5pDhKKgKt43d0Wo_-kH3E3aaEgG"> <img
+            <a href="https://goo.gl/eESntL"> <img
                     class="w-100 wow fadeInUpBig img1" data-wow-duration="1s" src="../static/images/(6).jpg"></a>
             <p class="templatestxt pt-3 text-center wow fadeInUpBig  bold" data-wow-duration="1.5s">Our team work</p>
             <p class="templatestxt2 mb-5 text-center wow fadeInUpBig regular" data-wow-duration="1.5s">
                 The result of our team work is this project called "Smile-dent".<br>
                 "Smile-dent" is the idea of online-registering the patients in stomatology.<br>
-                <a href="https://drive.google.com/open?id=1-m4dW5pDhKKgKt43d0Wo_-kH3E3aaEgG"
+                <a href="https://goo.gl/eESntL"
                    class="a  bold">view project</a></p>
 
         </div>
