--- a/portfilio/src/main/resources/static/css/style.css
+++ b/portfilio/src/main/resources/static/css/style.css
@@ -20,14 +20,12 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-
-
 .header{
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     min-height: 95vh;
-    background-image: url("images/linkedin_bw.jpg");
+    background-image: url("../../templates/images/linkedin_bw.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -38,7 +36,7 @@ body::-webkit-scrollbar-thumb {
     -moz-appearance: none;
     appearance: none;
     min-height: 30vh;
-    background-image: url("images/linkedin_bw.jpg");
+    background-image: url("../../templates/images/linkedin_bw.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -49,7 +47,7 @@ body::-webkit-scrollbar-thumb {
     -moz-appearance: none;
     appearance: none;
     min-height: 10vh;
-    background-image: url("images/linkedin_bw.jpg");
+    background-image: url("../../templates/images/linkedin_bw.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
